<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

        <variable
            name="viewModel"
            type="com.udacity.shoestore.shoelist.ShoeListViewModel" />
    </data>

    <!--    ConstraintLayout was used here because it makes it easier to align the views in the layout while keeping the view hierchy flat. -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toTopOf="@+id/shoe_name_editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />


        <EditText
            android:id="@+id/shoe_name_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:inputType="text"
            android:text="@={shoe.name}"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_name"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name" />

        <TextView
            android:id="@+id/shoe_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_editText"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_editText"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_editText" />

        <EditText
            android:id="@+id/shoe_size_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/shoe_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_size"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size" />

        <TextView
            android:id="@+id/shoe_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_company"
            app:layout_constraintBottom_toTopOf="@+id/shoe_company_editText"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_editText"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_editText" />

        <EditText
            android:id="@+id/shoe_company_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:inputType="text"
            android:text="@={shoe.company}"
            app:layout_constraintBottom_toTopOf="@+id/shoe_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_company"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company" />

        <TextView
            android:id="@+id/shoe_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shoe_description"
            app:layout_constraintBottom_toTopOf="@+id/shoe_description_editText"
            app:layout_constraintStart_toStartOf="@+id/shoe_company_editText"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_editText" />


        <EditText
            android:id="@+id/shoe_description_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="text"
            android:text="@={shoe.description}"
            app:layout_constraintBottom_toTopOf="@+id/save_shoe_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_description"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description" />

        <Button
            android:id="@+id/save_shoe_button"
            style="@style/Button.PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/save_shoe"
            android:onClick="@{() -> viewModel.addShoe(shoe)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="@{() -> viewModel.onCancel()}"
            app:layout_constraintBottom_toBottomOf="@+id/save_shoe_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_shoe_button" />

        <!--        TODO: Add shoe images-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>